--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title><CSCE 190: Emma Kirchner </title>
+    </head>
+    <body>
+        <h1> Emma Kirchner </h1>
+    </body>
+</html>
