color and style

--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html>
     <head>
         <title><CSCE 190: Emma Kirchner </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1> Emma Kirchner </h1>
-        <p> CSCE 190</p>
+        <div class="about">
+            <h2>About me</h2>
+            <p>I wanted to pursue computer science due to my passion for coding. I personally think it’s very interesting and engaging, but I also just want to be able to live comfortably. I want it to work as a building block for me to be able to afford my hobbies, such as painting or playing music. I’d consider myself passionate towards what I love, such as coding and art.</p>
+        </div>
+        <div class="skills">
+            <ul>
+                <li>Fast learner</li>
+                <li>Decent knowledge in Python and Java</li>
+                <li>Easily engaged with what I do</li>
+            </ul>
+        </div>
+        <div class="projects">
+            <h2>Highlighted projects</h2>
+        </div>
+        <div class="contact">
+            <h2>Contact me</h2>
+            <ul>
+                <li>Instagram: @nerdifierrr</li>
+                <li>Email: emmakirchner1223@gmail.com</li>
+            </ul>
+        </div>
     </body>
 </html>
