--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2>
+            <section class="project">
+                <a href="Files/probStatement.pdf">
+                    <h3>Problem Statement</h3>
+                </a>
+                <a href="Files/probStatement.pdf">
+                    <img src="Images/probStatement.png">
+                </a>
+                <p>Too much food waste in the dining halls</p>
+            </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
