--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </div>
         <div class="skills">
             <ul>
-                <li>Fast learner</li>
-                <li>Decent knowledge in Python and Java</li>
-                <li>Easily engaged with what I do</li>
+                <li>I am a fast learner.</li>
+                <li>I have decent knowledge in coding languages such as Python and Java.</li>
+                <li>I am easily engaged with what I do.</li>
             </ul>
         </div>
         <div class="projects">
