--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="projects">
             <h2>Highlighted projects</h2>
             <section class="project">
-                <a href="Files/probStatement.pdf">
+                <a href="Files/problemStatement.pdf">
                     <h3>Problem Statement</h3>
                 </a>
-                <a href="Files/probStatement.pdf">
-                    <img src="Images/probStatement.png">
+                <a href="Files/problemStatement.pdf">
+                    <img src="Images/problemStatement.png">
                 </a>
                 <p>Too much food waste in the dining halls</p>
             </section>
