changed prob statement

--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
                 <a href="Files/problemStatement.pdf">
                     <img src="Images/problemStatement.png">
                 </a>
-                <p>Too much food waste in the dining halls</p>
+                <p>Necessary school computers are too expensive.</p>
             </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
             <ul>
-                <li>Instagram: @nerdifierrr</li>
                 <li>Email: emmakirchner1223@gmail.com</li>
             </ul>
         </div>
