added affinity and colors

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2>
+
+            <!--Problem statement assignment-->
             <section class="project">
                 <a href="Files/problemStatement.pdf">
                     <h3>Problem Statement</h3>
@@ -28,6 +30,12 @@
                 </a>
                 <p>Necessary school computers are too expensive.</p>
             </section>
+            <section class="project">
+                <a href="Files/Affinity.pdf"><h3>Affinity Diagram</h3></a>
+                <a href="Files/Affinity.pdf"><img src="Images/Affinity Diagram.png"></a>
+                <p>Plans to solve problem statement using research and problem solving.</p>
+            </section>
+
         </div>
         <div class="contact">
             <h2>Contact me</h2>
