--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!--Problem statement assignment-->
             <section class="project">
                 <a href="Files/problemStatement.pdf">
-                    <h3>Problem Statement</h3>
+                    <h2>     </h2><h3>Problem Statement</h3>
                 </a>
                 <a href="Files/problemStatement.pdf">
                     <img src="Images/problemStatement.png">
@@ -31,8 +31,10 @@
                 <p>Necessary school computers are too expensive.</p>
             </section>
             <section class="project">
-                <a href="Files/Affinity.pdf"><h3>Affinity Diagram</h3></a>
-                <a href="Files/Affinity.pdf"><img src="Images/Affinity Diagram.png"></a>
+                <a href="Files/Affinity.pdf">
+                    <h3>Affinity Diagram</h3></a>
+                <a href="Files/Affinity.pdf">
+                    <img src="Images/Affinity Diagram.png"></a>
                 <p>Plans to solve problem statement using research and problem solving.</p>
             </section>
 
