--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
                     <img src="Images/Affinity Diagram.png"></a>
                 <p>Plans to solve problem statement using research and problem solving.</p>
             </section>
-
+            <section class="project">
+                <a href="File/sketches.pdf">
+                    <h3>Sketches</h3></a>
+                <a href="Files/sketches.pdf">
+                    <img src="Images/sketch.png"></a>
+                <p>Will work as a website to guide users to proper sellers
+                    that sell the computers they need for their specific needs (ie. gaming, schooling, etc.)
+                </p>
+            </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
