--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <link rel="stylesheet" href="div_res_style.css" >
+  </head>
+<body>
+  <div class="header">
+    <h1>Emma Kirchner</h1>
+    <div class="contact">
+      Email: emmakirchner1223@gmail.com | Location: Columbia, SC
+    </div>
+    <hr>
+  </div>
 
+  <div class="section">
+    <div class="section-title">Education</div>
+    <div class="section-content">
+      <strong>University of South Carolina</strong><br>
+      BS Computer Science<br>
+      Dean’s List (2025)
+      Capstone (2025)
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="section-title">Work Experience</div>
+    <div class="section-content">
+      <strong>Host</strong>, Nacho Hippo- Myrtle Beach, SC (2024-2025)
+      <ul>
+        <li>Used their machines to take food and retail orders.</li>
+        <li>Communicated with customers and coworkers in order to reach their needs.</li>
+        <li>Organized table graphs on physical restaurant map.</li>
+      </ul>
+
+      <strong>Cashier</strong>, Zaxby's (2023-2024)
+      <ul>
+        <li>Worked under high pressure circumstances.</li>
+        <li>Used time management to clean and restock when it wasn’t busy.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="section">
+    <div class="section-title">Skills</div>
+    <div class="section-content">
+      <ul>
+        <li>Knowledge in programs like Adobe Animate, Illustrator, and Photoshop.</li>
+        <li>Knowledge in coding languages, such as Python and Java.</li>
+        <li>Basic computer knowledge navigating Windows and general operating systems.</li>
+      </ul>
+    </div>
+  </div>
+</body>
+
+</html>
