--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     <div class="section-content">
       <strong>University of South Carolina</strong><br>
       BS Computer Science<br>
-      Dean’s List (2025)
+      Dean’s List (2025)<br>
       Capstone (2025)
     </div>
   </div>
