--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
             <p>I wanted to pursue computer science due to my passion for coding. I personally think it’s very interesting and engaging, but I also just want to be able to live comfortably. I want it to work as a building block for me to be able to afford my hobbies, such as painting or playing music. I’d consider myself passionate towards what I love, such as coding and art.</p>
         </div>
         <div class="skills">
-            <ul>
-                <li>I am a fast learner.</li>
-                <li>I have decent knowledge in coding languages such as Python and Java.</li>
-                <li>I am easily engaged with what I do.</li>
-            </ul>
+            <h2>Skills</h2>
+            <p>My resume: </p>
+            <a href="resume.html">
+                <p>HTML link</p>
+            </a>
+            <p> | </p>
+            <a href="Resume (4).pdf">
+                <p>PDF link</p>
+            </a>
         </div>
         <div class="projects">
-            <h2>Highlighted projects</h2>
+            <h2>Highlighted projects</h2><br>
 
             <!--Problem statement assignment-->
             <section class="project">
