--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
         </div>
         <div class="skills">
             <h2>Skills</h2>
-            <p>My resume: </p>
-            <a href="resume.html">
-                <p>HTML link</p>
-            </a>
-            <p> | </p>
-            <a href="Resume (4).pdf">
-                <p>PDF link</p>
-            </a>
+            <span>
+                My resume: <a href="files/Resume (4).pdf">PDF version</a>
+|               <a href="resume.html">HTML version</a>
+            </span>
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2><br>
