--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div class="skills">
             <h2>Skills</h2>
             <span>
-                My resume: <a href="files/Resume (4).pdf">PDF version</a>
+                My resume: <a href="Files/Resume (4).pdf">PDF version</a>
 |               <a href="resume.html">HTML version</a>
             </span>
         </div>
         <div class="projects">
-            <h2>Highlighted projects</h2><br>
-
+            <h2>Highlighted projects</h2>
+            <h1> </h1>
             <!--Problem statement assignment-->
             <section class="project">
                 <a href="Files/problemStatement.pdf">
