--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                     that sell the computers they need for their specific needs (ie. gaming, schooling, etc.)
                 </p>
             </section>
+            <section class="project">
+                <a href="https://github.com/emmakirchner1223/Java_Code">
+                    <h3>Past java code</h3>
+                </a>
+                <a href="https://github.com/emmakirchner1223/Java_Code">
+                    <img src="Images/java.png">
+                </a>
+                <p>Java code from past course.</p>
+            </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
