--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <h2>Highlighted projects</h2>
         <div class="projects">
-            
+
             <!--Problem statement assignment-->
             <section class="project">
                 <a href="Files/problemStatement.pdf">
@@ -38,7 +38,7 @@
                 <p>Plans to solve problem statement using research and problem solving.</p>
             </section>
             <section class="project">
-                <a href="File/sketches.pdf">
+                <a href="Files/sketches.pdf">
                     <h3>Sketches</h3></a>
                 <a href="Files/sketches.pdf">
                     <img src="Images/sketch.png"></a>
