--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
         <div class="contact">
             <h2>Contact me</h2>
             <ul>
-                <li>Email: emmakirchner1223@gmail.com</li>
+                <li>Email:
+                    <a href="mailto: emmakirchner1223@gmail.com">
+                        emmakirchner1223@gmail.com
+                    </a>
+                </li>
             </ul>
         </div>
     </body>
